--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -31,15 +31,15 @@ jobs:
             - name: deploy # 部署
               run: |
                   ssh root@1.117.16.238 "
-                    # 【注意】用 work 账号登录，手动创建 /home/work/imooc-lego 目录
-                    # 然后 git clone https://username:password@github.com/imooc-lego/biz-editor-server.git -b dev （私有仓库，使用 github 用户名和密码）
-                    # 记得删除 origin ，否则会暴露 github 密码
+                    【注意】用 work 账号登录，手动创建 /home/work/imooc-lego 目录
+                    然后 git clone https://76884987@qq.com:ding810934@github.com/ddking/biz-editor-server.git -b dev （私有仓库，使用 github 用户名和密码）
+                    记得删除 origin ，否则会暴露 github 密码
 
-                    cd /home/work/imooc-lego/biz-editor-server;
-                    git remote add origin https://76884987@qq.com:${{secrets.GIT_KET}}git@github.com:dd-king/biz-editor-server-open.git;
-                    git checkout dev;
-                    git pull origin dev; # 重新下载最新代码
-                    git remote remove origin; # 删除 origin ，否则会暴露 github 密码
+                    # cd /home/work/imooc-lego/biz-editor-server;
+                    # git remote add origin https://76884987@qq.com:${{secrets.GIT_KET}}git@github.com:dd-king/biz-editor-server-open.git;
+                    # git checkout dev;
+                    # git pull origin dev; # 重新下载最新代码
+                    # git remote remove origin; # 删除 origin ，否则会暴露 github 密码
                     # 启动 docker
                     docker-compose build editor-server; # 和 docker-compose.yml service 名字一致
                     docker-compose up -d;
