--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,6 +37,7 @@ jobs:
 
                     cd /home/work/imooc-lego/biz-editor-server;
                     git clone https://github.com/dd-king/biz-editor-server-open.git
+                    cd biz-editor-server-open
                     git checkout dev;
                     git pull origin dev; # 重新下载最新代码
                     git remote remove origin; # 删除 origin ，否则会暴露 github 密码
